# ally-platform

./: .env.development  .env.production  .gitignore  README.md  build-and-run.bat  build-and-run.sh  docker-compose.dev.yml  docker-compose.yml  endpoint_test_results.json  test_all_endpoints.py
backend/: .env.docker  .pylintrc  Dockerfile  alembic.ini  check_and_stamp.py  clear_alembic.py  create_database.py  docker-entrypoint.sh  pyproject.toml  requirements.txt  reset_migrations.py  run_production.py  run_server.py  stamp_alembic.py  verify_codebase.py  verify_database.py
backend/alembic/: env.py
backend/alembic/versions/: fresh_001_initial_migration.py
backend/app/: __init__.py  config_api.py  config_manager.py  main.py
backend/app/api/: __init__.py
backend/app/api/core/: routes.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/config/: __init__.py  route_config.py
backend/app/api/v1/test/: routes.py
backend/app/core/: __init__.py  config.py  database.py  environment.py  startup.py
backend/app/models/: __init__.py
backend/app/services/: database_service.py
config/: client-config.json  client-config.schema.json  default-config.json  migrate_database.py  production-config.json  validate_schema.py
docker/mysql/init/: 01-init.sql
docs/: CODEBASE_VERIFICATION_REPORT.md  EXTERNAL_SERVICES_SETUP.md  PHASE_1_FOUNDATION.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md
frontend/: .env.local  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
scripts/: deploy_production.py  test_services.py
(+8 files in other folders)
